--- a/client/src/components/styles/styles.css
+++ b/client/src/components/styles/styles.css
@@ -24,26 +24,15 @@ a:hover {
 
 }
 
-.basket_img{
-    background-color: rgba(3, 0, 40, 0.8) !important;
-    border: white 1px;
-    border-radius: 5px;
-    font-size: 2vmin;
-    transition-duration: 0.25s;
-    outline: white solid 1px;
-    color:red
-}
-
-.basket_img:hover{
-    color:rgba(3, 0, 40, 0.8) !important;
-    background-color: white !important;
-}
 
 /*Filter styles*/
-.basket_img_style {
+.basket_img {
+    width: clamp(20px, 3vw, 180px);
+    margin-right: 15px;
+    margin-left: 5px;
     transition-duration: 0.15s;
 }
-.basket_img_style:hover {
+.basket_img:hover {
     filter: drop-shadow(0px 0px 1px #ff9100) invert(38%) sepia(60%) hue-rotate(-5deg) saturate(6);
 
 }
