--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -15,14 +15,19 @@
     padding:0 5vw 0;
 }
 
+.auth_margin_right{
+    margin-right: 20px;
+}
+
 .auth_button{
     border: none;
     outline: orange solid 2px;
     color: orange;
     background: #030028FF;
     vertical-align: middle;
+    padding: 0 0.5vw 0;
     border-radius: 40px;
-    font-size: clamp(6px, 1.5vw, 40px);
+    font-size: clamp(6px, 1.25vw, 40px);
     height: clamp(20px, 2.5vw, 60px);
     transition: 0.3s;
 }
@@ -80,8 +85,12 @@
 
     }
     .auth_button{
-        font-size: 16px;
+        font-size: clamp(8px, 2.5vw, 40px);
         height: 25px;
+    }
+
+    .auth_margin_right{
+        margin-right: clamp(8px, 1vw, 40px);
     }
 
     .collapsed_search{
