--- a/client/src/pages/DeviceShop/buttonDeviceAddToBasket.css
+++ b/client/src/pages/DeviceShop/buttonDeviceAddToBasket.css
@@ -35,7 +35,7 @@
 .add_to_basket {
     scale: 120%;
     width: clamp(20px, 1.5vw, 40px);
-    height: clamp(20px, calc(2vw*1vh), 40px);
+    height: clamp(20px, 2vw, 40px);
     transition-duration: 0.15s;
     justify-content: center;
 }
