--- a/client/src/components/SelectorBar/SelectorBar.css
+++ b/client/src/components/SelectorBar/SelectorBar.css
@@ -1,18 +1,61 @@
+.upper_selector_div{
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .selector_div{
     display: flex;
     flex-wrap: wrap;
     box-shadow: 0 0 4px #040217;
     border-radius: 5px;
-    padding: 20px;
+    padding: 20px 0 20px;
+    height: auto;
     width: clamp(150px, 24vw, 340px);
     justify-content: center;
     text-align: center;
     align-items: center;
+    opacity: 1;
+    transition: 0.3s;
 }
 
+.detailed_search{
+    display: none;
+}
 
-@media screen and (max-width: 768px) {.selector_div{
+.selector_div_closed{
+    height: 0;
+    width: 100%;
+    pointer-events: none;
+    opacity: 0;
+    transition: 0.3s;
+}
 
-    padding:20px;
-    width: clamp(150px, 80%, 100%);
-}}
+@media screen and (max-width: 768px) {
+    .detailed_search{
+        vertical-align: middle;
+        height: 10vh;
+        line-height: 10vh;
+        background: #007afe;
+        width: 100%;
+        color: white;
+        text-align: center;
+        font-size: clamp(20px, 6vw, 340px);
+        border-radius: 0 0 50px 50px;
+        box-shadow: 0 0 5px #007afe;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+    .selector_div{
+        margin: 15px 0 15px;
+        padding:10px;
+        height: 70vh;
+        width: clamp(150px, 90%, 100%);
+    }
+    .detailed_search{
+        width: 100vw;
+        display: inline-block;
+    }
+}
