--- a/client/src/pages/Shop/Shop.css
+++ b/client/src/pages/Shop/Shop.css
@@ -1,4 +1,5 @@
 .shop_block{
+ padding-top: 30px;
  display: flex;
 }
 
@@ -24,11 +25,15 @@
 
 @media screen and (max-width:768px) {
     .shop_block{
+        padding-top: 0;
         display: flex;
         flex-direction: column;
     }
     .right_side{ width: 100%;padding: 0;}
     .left_side{
+        position: sticky;
+        top: 95px;
+        z-index: 10;
         width: 100%;
         padding: 0;
         display: flex;
