--- a/client/src/components/SelectorBar/accordion.css
+++ b/client/src/components/SelectorBar/accordion.css
@@ -18,7 +18,6 @@
     font-size: clamp(15px, 2vw, 130px);
     outline: none;
     min-width: 115px;
-    max-width: 300px;
     width: calc(22vw - 50px);
     transition: 0.3s;
     justify-content: center;
@@ -52,7 +51,6 @@
     font-size: clamp(15px, 2vw, 80px);
     outline: none;
     min-width: 115px;
-    max-width: 300px;
     width: calc(22vw - 50px);
     transition: 0.3s;
     justify-content: center;
@@ -90,11 +88,12 @@
     box-shadow: 0 0 3px black inset;
     border-radius: 5px;
     height: clamp(135px, 40vh, 300px);
+    min-width: 150px;
+    width: 20vw;
     transition: 0.3s ease-out;
     margin: 0 10px 0;
     z-index: 5;
     overflow: hidden;
-    width: clamp(150px,20vw, 400px);
     justify-content: center;
     align-items: center;
     text-align: center;
