--- a/client/src/pages/Device/DeviceItem/DeviceItem.css
+++ b/client/src/pages/Device/DeviceItem/DeviceItem.css
@@ -31,13 +31,14 @@
     justify-content: space-between;
     align-items: center;
     font-weight: 600;
+    margin-right: 0.5vw;
     margin-left: 1vw;
     font-size: clamp(20px, 1vw, 80px);
     height: clamp(10px, 20vw, 40px);
 }
 
 .star{
-    width: clamp(6px, 1.5vw, 20px);
+    width: clamp(20px, 1.5vw, 30px);
     height: clamp(20px, 1vw , 30px);
 }
 
