--- a/client/src/pages/Device/DeviceItem/DeviceItem.css
+++ b/client/src/pages/Device/DeviceItem/DeviceItem.css
@@ -4,6 +4,7 @@
     border-radius: 20px;
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin: 2vh 15vw 5vh 0;
     padding: 1.5vh 1vw 1.5vh;
@@ -26,20 +27,23 @@
     padding-top: 2vh;
     scale: 110%;
 }
+.device_name{
+    font-size: clamp(20px, 1vw, 80px);
+}
+
 .rating_name{
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-weight: 600;
-    margin-right: 0.5vw;
-    margin-left: 1vw;
+    margin-left: 0.5vw;
     font-size: clamp(20px, 1vw, 80px);
     height: clamp(10px, 20vw, 40px);
 }
 
 .star{
-    width: clamp(20px, 1.5vw, 30px);
-    height: clamp(20px, 1vw , 30px);
+    width: clamp(40px, 2vw, 60px);
+    height: clamp(30px, 1.5vw , 50px);
 }
 
 .price_add{
@@ -52,11 +56,19 @@
     padding: 25px 5px;
     font-weight: 600;
     color: #007afe;
-    margin-left: 10px;
     font-size: clamp(20px, 2vw, 80px);
 }
 
 .currency{
     margin-left: 5px;
     padding-top: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .device_name{
+        padding-top: 20px;
+    }
+    .price{
+        padding: 45px 5px;
+    }
 }
