--- a/client/src/pages/Basket/Basket.css
+++ b/client/src/pages/Basket/Basket.css
@@ -1,4 +1,155 @@
-.remove_basket_device{
-    font-size: clamp(10px, 2vw, 500px) !important;
 
+.basket{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+
+.basket_devs_block{
+    padding: 0 50px 0;
+}
+
+.basket_device{
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0 0 3px black;
+    margin-bottom: 20px;
+    padding:20px;
+    align-items: center;
+}
+
+.basket_device_image{
+    font-size: clamp(6px, 1.25vw, 40px);
+    width: clamp(15px, 10vw, 280px);
+    height: clamp(15px, 10vw, 280px);
+    margin: 10px 40px 10px ;
+    border-radius: 5px;
+    padding:5px;
+}
+
+.remove_basket_device{
+    display: flex;
+    align-self: start;
+    margin-left: auto;
+    font-size: clamp(10px, 2vw, 500px) !important;
+}
+
+.basket_device_name{
+    margin-right: calc( 5vw - 20px);
+    justify-content: center;
+    text-align: center;
+    font-size: clamp(20px, 3vw, 500px);
+}
+
+.empty_text{
+    font-size: clamp(50px, 6vw, 500px) !important;
+    margin: 80px 220px 40px 220px;
+}
+
+.to_pay_block{
+    box-shadow: 0 0 3px black;
+    border-radius: 5px;
+    padding: 20px;
+    margin-right: 50px;
+}
+
+.to_pay_text{
+    white-space: nowrap;
+    font-size: clamp(10px, 3vw, 500px);
+    font-weight: 200;
+}
+
+.to_pay_total_amount{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    margin-bottom: 0 !important;
+    font-size: clamp(10px, 3vw, 500px);
+    font-weight: 400;
+    justify-content: center;
+    color: #007afe;
+    padding-left: 5px;
+}
+
+.pay_auth{
+    display: flex;
+    align-items: center;
+    align-self: center;
+    font-size: clamp(4px, 1.5vw, 500px);
+    width: 100%;
+    height: clamp(20px, 5vw, 500px);
+    border: solid var(--my_number_of_dev_color) 1px;
+    color: var(--text_color);
+    border-radius: 5px;
+    transition: 0.3s;
+    justify-content: center;
+}
+
+.pay_auth:hover{
+    background: var(--my_number_of_dev_color);
+    color: white;
+    outline: none;
+    box-shadow: 0 0 3px var(--my_number_of_dev_color);
+}
+
+.pay_auth:focus{
+    outline: none;
+}
+
+@media screen and (max-width: 768px) {
+    .basket{
+        flex-direction: column-reverse;
+    }
+    .basket_device_image{
+        width: clamp(15px,20vw, 280px);
+        height: clamp(15px, 20vw, 280px);
+        margin: 2px 5px 2px 5px;
+        border-radius: 5px;
+        padding:5px;
+    }
+
+    .basket_devs_block{
+        padding: 0 20px 0;
+        width: 100% !important;
+    }
+    .basket_device{
+        margin-top: 20px;
+    }
+
+    .basket_device_name{
+        font-size: clamp(2px, 4vw, 500px) !important;
+    }
+
+    .upper_to_pay_block{
+        width: 100% !important;
+        position: sticky;
+        top: 15% ;
+        z-index: 10;
+    }
+    .to_pay_block{
+        display: flex;
+        background: #c4d7f5;
+        box-shadow: 0 0 3px black;
+        border-radius: 5px;
+        padding: 20px;
+        margin: 0 20px 0;
+        justify-content: space-between;
+    }
+
+    .to_pay_text{
+        font-size: clamp(5px, 4vw, 500px);
+        padding-right: 20px;
+    }
+
+    .to_pay_total_amount{
+        font-size: clamp(5px, 5vw, 500px);
+        margin: 0 2px 0;
+    }
+    .pay_auth{
+        display: flex;
+        justify-content: center;
+        width: clamp(20px, 18vw, 500px);
+        height: clamp(20px, 7vw, 500px);
+        font-size: clamp(5px, 2vw, 500px);
+    }
 }
