--- a/client/src/pages/Basket/Basket.css
+++ b/client/src/pages/Basket/Basket.css
@@ -42,8 +42,10 @@
 }
 
 .empty_text{
-    font-size: clamp(50px, 6vw, 500px) !important;
-    margin: 80px 220px 40px 220px;
+    padding-top: 7vh;
+    font-size: clamp(20px, 6vw, 500px) !important;
+    justify-content: center;
+    text-align: center;
 }
 
 .to_pay_block{
@@ -83,6 +85,7 @@
     border-radius: 5px;
     transition: 0.3s;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .pay_auth:hover{
@@ -142,7 +145,7 @@
     }
 
     .to_pay_total_amount{
-        font-size: clamp(5px, 5vw, 500px);
+        font-size: clamp(5px, 6vw, 500px) !important;
         margin: 0 2px 0;
     }
     .pay_auth{
