--- a/client/src/pages/Basket/NumberOfDevices/BasketNumberOfDevicesInput.css
+++ b/client/src/pages/Basket/NumberOfDevices/BasketNumberOfDevicesInput.css
@@ -1,9 +1,3 @@
-:root{
-    --my_number_of_dev_color: #007afe;
-    --text_color: #007afe;
-    --font_text_size_button: clamp(15px, 2vw, 500px);
-    --number_of_dev_heigth: clamp(20px, 4vw, 500px);
-}
 
 .block_number_of_devices{
     display: flex;
@@ -14,11 +8,11 @@
     text-align: center;
 }
 .price_basket_device{
-    color: var(--my_number_of_dev_color);
+    color: #007afe;
 
 }
 .currency{
-    font-size: var(--my_number_of_dev_color);
+    font-size: clamp(15px, 2vw, 500px);
     padding-left: 5px;
 }
 
@@ -31,28 +25,28 @@
     display: block;
     align-items: center;
     width: clamp(30px, 3vw, 400px);
-    height: var(--number_of_dev_heigth);
-    font-size: var(--font_text_size_button);
+    height: clamp(20px, 4vw, 500px);
+    font-size: clamp(15px, 2vw, 500px);
     border-radius: 5px 0 0 5px;
-    border: solid var(--my_number_of_dev_color) 1px;
-    color: var(--text_color);
+    border: solid #007afe 1px;
+    color: #007afe;
     transition: 0.3s;
 }
 
 .number_of_dev_button:hover{
-    background: var(--my_number_of_dev_color);
+    background: #007afe;
     color: white;
     outline: none;
-    box-shadow: 0 0 3px var(--my_number_of_dev_color);
+    box-shadow: 0 0 3px #007afe;
 }
 .number_of_dev_button:focus{
     outline: none;
 }
 
 .input_number_of_dev{
-    height: var(--number_of_dev_heigth);
+    height: clamp(20px, 4vw, 500px);
     width: clamp(20px, 8vw, 400px);
-    font-size: var(--font_text_size_button);
+    font-size: clamp(15px, 2vw, 500px);
     text-align: center;
     outline: none;
     border: 1px solid rgba(0, 0, 0, 25%);
@@ -61,7 +55,7 @@
 .input_number_of_dev:focus{
     outline: none;
     border: none;
-    box-shadow: 0 0 3px var(--my_number_of_dev_color);
+    box-shadow: 0 0 3px #007afe;
 }
 
 .left_button{
