Add request on render.com every 10 minutes

--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -63,6 +63,7 @@
     transition-duration: 0.15s;
 }
 .basket_img:hover {
+    cursor: pointer;
     filter: drop-shadow(0px 0px 1px #ff9100) invert(38%) sepia(60%) hue-rotate(-5deg) saturate(6);
 }
 
